--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -48,6 +48,38 @@
   color: black;
 }
 
+.scrolling-text-container {
+  width: 60%;
+  height: 200px;
+  overflow: hidden;
+  position: relative;
+  background-color: none;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.scrolling-text {
+  display: inline-block;
+  white-space: nowrap;
+  animation: scroll 10s linear infinite;
+  width: 100%;
+  height: 50px;
+  font-size: 1.2em;
+  color: #3d52a0;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
 .skills {
   list-style: none;
   padding: 0;
@@ -292,6 +324,9 @@
   .bio {
     font-size: 1em;
   }
+  .scrolling-text-container {
+    width: 100%;
+  }
 
   .skills {
     gap: 15px;
@@ -384,6 +419,9 @@
   .bio {
     font-size: 0.9em;
     text-align: justify;
+  }
+  .scrolling-text-container {
+    width: 100%;
   }
 
   .skills {
