--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -138,6 +138,7 @@
   text-align: center;
   background-color: lightblue;
   border-radius: 10px;
+  padding: 2px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
   position: relative;
