--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -391,7 +391,7 @@
   }
 
   .items-fav-container,
-  .items-intrest-container {
+  .items-interest-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
@@ -460,7 +460,7 @@
     margin-bottom: 0px;
   }
   .items-fav-container,
-  .items-intrest-container {
+  .items-interest-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 5px;
