--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -10,6 +10,8 @@
 .filter-wrapper {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   margin-top: 1rem;
 }
