--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,18 +1,22 @@
 body {
   background: linear-gradient(135deg, #b5d6e6, #e6f2f7);
 }
+
 .h-custom {
   margin-top: 50px;
-  height: 100vh;
+  min-height: 100vh;
 }
+
 .my-5 {
   margin-top: 1rem !important;
   margin-bottom: 3rem !important;
 }
+
 .shadow-5,
 .p-5 {
   background: linear-gradient(to right, #e6e6e6, #f9f9f9);
 }
+
 .lottie-animation {
   width: 100%;
   height: auto; /* Adjust height for responsiveness */
@@ -23,9 +27,11 @@ body {
   background-color: #3b71ca;
   border: 1px solid #ddd;
 }
+
 .p-5 {
   background: none;
 }
+
 .btn-social:hover {
   background-color: #e0e0e0;
 }
@@ -57,13 +63,20 @@ body {
   color: #ff1744;
 }
 
-/* Center the MDBContainer on small screens */
+.form-input input {
+  width: 100%;
+  box-sizing: border-box; /* Ensure padding doesn't affect the total width */
+  padding: 0.5rem; /* Adjust padding as needed */
+  border: 1px solid #ccc; /* Adjust border as needed */
+  border-radius: 4px; /* Optional: add rounded corners */
+}
+
 @media screen and (max-width: 768px) {
   .h-custom {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70vh; /* Ensure full height for vertical centering */
+    min-height: 70vh; /* Ensure full height for vertical centering */
     padding: 2rem 1rem;
   }
 
@@ -108,17 +121,19 @@ body {
     margin-bottom: 0.5rem; /* Add margin for better spacing */
   }
 }
+
 @media screen and (max-width: 540px) {
   .p-3.my-5.h-custom {
-    height: 120vh;
+    min-height: 120vh;
   }
   .divider {
     margin-left: 0;
   }
 }
+
 @media screen and (max-width: 480px) {
   .p-3.my-5.h-custom {
-    height: 90vh;
+    min-height: 125vh;
   }
   .divider {
     margin-left: 0;
@@ -130,7 +145,7 @@ body {
     margin-left: 0;
   }
   .p-3.my-5.h-custom {
-    height: 110vh;
+    min-height: 145vh;
   }
   .lottie-animation {
     height: 200px; /* Adjust height for the smallest screens */
