--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -10,10 +10,10 @@
 .filter-wrapper {
   display: flex;
   justify-content: center;
-  flex-direction: column;
-  align-items: center;
   width: 100%;
   margin-top: 1rem;
+  flex-direction: column;
+  align-items: center;
 }
 
 .middlecontent {
@@ -48,7 +48,7 @@
 .sortfilterOn {
   margin-top: 2rem;
   display: flex;
-  width: 10vw;
+  width: 8vw;
   justify-content: center;
 }
 
@@ -84,6 +84,13 @@
   justify-content: center;
 }
 
+@media screen and (max-width: 1024px) {
+  .sortfilterOff,
+  .sortfilterOn {
+    width: 11vw;
+  }
+}
+
 @media screen and (max-width: 820px) {
   .posts,
   .postsfilter {
@@ -96,7 +103,13 @@
   }
   .sortfilterOff,
   .sortfilterOn {
-    width: 15vw;
+    width: 14vw;
+  }
+}
+@media screen and (max-width: 540px) {
+  .sortfilterOff,
+  .sortfilterOn {
+    width: 20vw;
   }
 }
 
